<resources>
    <string name="app_name">MindMemo</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="color">Color</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="enter_title">Enter Title...</string>
    <string name="enter_content_text">Enter Content Text...</string>
</resources>