package ir.bahmanghasemi.mindmemo.core.util

object TestTags {
    const val ORDER_SECTION = "ORDER_SECTION"
    const val NOTE_ITEM = "NOTE_ITEM"
    const val SNACK_BAR = "SNACK_BAR"
}